--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
       #butt-4:hover {
         box-shadow: 0px 5px 10px 0px rgba(66, 68, 90, 1);
       }
+      h5,h6 {
+        text-align: center;
+      }
+      .card-text {
+        text-align: center;
+        
+      }
+      .card-body {
+        background-color: #DC3545;
+      }
     </style>
   </head>
   <body>
@@ -257,7 +267,7 @@
             </tbody>
           </table>
           <button id="butt-4" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">Add Track</button>
-          
+
           <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
